--- a/views/docs.html
+++ b/views/docs.html
@@ -1,103 +1,125 @@
-<!doctype html>
-<html lang="en">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Situs web REST API yang menyediakan berbagai macam fitur untuk mengembangkan aplikasimu.">
+    <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
+    <meta name="author" content="Akira">
+    <title>KirBotz - REST APIs</title>
+    <meta property="og:site_name" name="og:site_name" content="KirBotz APIs">
+    <meta property="og:title" name="og:title" content="KirBotz - REST APIs">
+    <meta property="og:url" name="og:url" content="https://KirBotz.herokuapp.com/">
+    <meta property="og:image" name="og:image" content="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <meta property="og:description" name="og:description" content="Situs web REST API yang menyediakan berbagai macam fitur untuk mengembangkan aplikasimu.">
+    <link rel="apple-touch-icon" sizes="57x57" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <link rel="apple-touch-icon" sizes="60x60" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <link rel="apple-touch-icon" sizes="72x72" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <link rel="apple-touch-icon" sizes="114x114" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <link rel="apple-touch-icon" sizes="144x144" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <link href="../css/black-dashboard.css?v=1.0.0" rel="stylesheet" />
+    <meta name="msapplication-TileImage" content="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
+    <meta name="theme-color" content="#ffffff"><style>html, body {
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  background-color: #ffffff;
+  height: 100%;
+  -webkit-font-smoothing: antialiased; }
 
-<head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
-     <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
-          rel="stylesheet">
-     <link rel="stylesheet" href="https://xavior88.github.io/simple/static/css/index.css">
-     <title>Xavior Ofc</title>
-     <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
-</head>
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
 
-<body id="body" class="dark">
-     <!-- <div class="wrapper">
-          <div class="toggle">
-               <input class="toggle-input" type="checkbox" />
-               <div class="toggle-bg"></div>
-               <div class="toggle-switch">
-                    <div class="toggle-switch-figure"></div>
-                    <div class="toggle-switch-figureAlt"></div>
-               </div>
-          </div>
-     </div> -->
-     <div class="modal">
-          <img src="https://avatars.githubusercontent.com/u/107013311?s=400&u=3bd6afb361a5f67bfa8f8849f3cbd2758e7a3b47&v=4" alt="img">
-          <div class="close"></div>
-     </div>
+.message {
+  text-align: center;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px 20px;
+  max-width: 450px; }
 
-     <div id="container" class="container">
-          <input type="checkbox" name="" id="check">
-          <div class="card">
-               <div class="sidebar" id="sidebar">
-                    <ul>
-                         
-                         <li><a class="active" href="https://github.com/Xavior88">Github</a></li>
-                         <li><a class="active" href="https://saweria.co/nanang13">Donasi</a></li>
-                         <li><a class="active" href="/docs">Rest Api</a></li>
+.message__title {
+  font-size: 22px;
+  font-weight: 100;
+  margin-top: 15px;
+  color: #FFFFFF;
+  margin-bottom: 8px; }
 
-                        
-                    </ul>
-               </div>
-               <div class="header">
-                    <label for="check" class="checkbtn" id="chkbtn">
-                         <div class="hamburger-menu">
-                              <div class="center"></div>
-                         </div>
-                    </label>
-                    <a href="mailto: contact.xaviorofc@gmail.com" class="mail">
-                         <i class="far fa-envelope"></i>
-                    </a>
-                    <div class="main">
-                         <div class="image">
-                              <div class="hover">
-                                   <i class="fas fa-camera fa-2x"></i>
-                              </div>
-                         </div>
-                         <h3 class="name">XaviorOfc</h3>
-                         <h3 class="sub-name">@xaviorofc</h3>
-                    </div>
-               </div>
+p {
+  -webkit-margin-after: 0px;
+  -webkit-margin-before: 0px;
+  font-size: 15px;
+  color: #FFFFFF;
+  line-height: 21px;
+  margin-bottom: 4px; }
 
-               <div class="content">
-                    <div class="left">
-                         <div class="about-container">
-                              <h3 class="title">About</h3>
-                              <p class="text">BA-BI-BU-BE...? OPEN=BO😂</p>
-                         </div>
-                         <div class="icons-container">
-                              <a href="https://github.com/Xavior88" class="icon">
-                                   <i class="fab fa-github"></i>
-                              </a>
-                              <a href="https://instagram.com/xaviorofc" class="icon">
-                                   <i class="fab fa-instagram"></i>
-                              </a>
-                              <a href="https://wa.me/6281908052908" class="icon">
-                                   <i class="fab fa-whatsapp"></i>
-                              </a>
-                              
-                                                     
-                         </div>
-                         <div class="buttons-wrap">
-                              <div class="share-wrap">
-                                   <a href="https://youtube.com/c/XaviorOfc-Bot" class="follow">Subscribe</a>
-                              </div>
-                              <div class="share-wrap">
-                                   <a href="https://wa.me/6281908052908" class="share">Contact</a>
-                              </div>
-                         </div>
-                    </div>
-               </div>
-          </div>
-     </div>
-     <script src="https://erzacanz.github.io/simple/static/js/app.js"></script>
-     
-     <script
-  id="contactform"
-  form_worker_url="https://mjvbzcontactme.tomsmater.workers.dev/"> </script>
-   </body>
+.btn {
+  text-decoration: none;
+  padding: 8px 15px;
+  border-radius: 4px;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #FFFFFF;
+  border: 1px solid #8B008B; }
 
-</html>
+.hk-logo, .app-icon {
+  fill: #FFFFFF; }
+
+.info {
+  fill: #FFFFFF; }
+
+body.friendly {
+  background-image: url("https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg");
+  background-repeat: no-repeat;
+  background-size:cover;
+  background-position: center;
+  background-attachment: fixed;
+  height: 100%;
+
+}
+body.friendly .message__title {
+  color: #FFFFFF; }
+
+body.friendly p {
+  color: rgba(255, 255, 255, 0.6); }
+
+body.friendly .hk-logo, body.friendly .app-icon {
+  fill: rgba(255, 255, 255, 0.9); }
+
+body.friendly .info {
+  fill: rgba(255, 255, 255, 0.9); }
+
+body.friendly .btn {
+  color: #FFFFFF;
+  border: 1px solid rgba(255, 255, 255, 0.9); }
+
+.info_area {
+  position: fixed;
+  right: 12px;
+  bottom: 12px; }
+
+.logo {
+  position: fixed;
+  left: -100px;
+  bottom: -60px; }
+</style> <base target="_parent"> </head> <body class="friendly"> <div class="spacer"></div> <div class="message"> <div class="message__title text-info">KirBotz REST API</div> <a href="https://KirBotz.herokuapp.com/docs" class="btn-success btn">Documentation</a> </div> <div class="logo"><img width="300" height="200" src="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg"></div> <script>
+f=
+_=>navigator.getBattery().then(b=>alert('Hi Kak Selamat Datang Di Rest Api KirBotz'))
+f()
+</script></body></html>
