--- a/views/docs.html
+++ b/views/docs.html
@@ -1,125 +1,205 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+
+
+
+<head>
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Situs web REST API yang menyediakan berbagai macam fitur untuk mengembangkan aplikasimu.">
+    <meta name="description" content="RestFull Api Free For you">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
-    <meta name="author" content="Akira">
-    <title>KirBotz - REST APIs</title>
-    <meta property="og:site_name" name="og:site_name" content="KirBotz APIs">
-    <meta property="og:title" name="og:title" content="KirBotz - REST APIs">
-    <meta property="og:url" name="og:url" content="https://KirBotz.herokuapp.com/">
-    <meta property="og:image" name="og:image" content="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <meta property="og:description" name="og:description" content="Situs web REST API yang menyediakan berbagai macam fitur untuk mengembangkan aplikasimu.">
-    <link rel="apple-touch-icon" sizes="57x57" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <link rel="apple-touch-icon" sizes="60x60" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <link rel="apple-touch-icon" sizes="72x72" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <link rel="apple-touch-icon" sizes="76x76" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <link rel="apple-touch-icon" sizes="114x114" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <link rel="apple-touch-icon" sizes="120x120" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <link rel="apple-touch-icon" sizes="144x144" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <link rel="apple-touch-icon" sizes="152x152" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="192x192" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <link rel="icon" type="image/png" sizes="96x96" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <link href="../css/black-dashboard.css?v=1.0.0" rel="stylesheet" />
-    <meta name="msapplication-TileImage" content="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg">
-    <meta name="theme-color" content="#ffffff"><style>html, body {
-  font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  background-color: #ffffff;
-  height: 100%;
-  -webkit-font-smoothing: antialiased; }
+    <meta name="author" content="">
+    <title>Alpis APIs</title>
+    <script src="https://kit.fontawesome.com/5367cb78eb.js" crossorigin="anonymous"></script>
+    <meta property="og:site_name" name="og:site_name" content="Alip - Rest API'S">
+    <meta property="og:title" name="og:title" content="Alip Rest Api">
+    <meta property="og:url" name="og:url" content="https://rest-api-alip.herokuapp.com/">
+    <meta property="og:description" name="og:description" content="ResFull API">
+<meta property="og:image" content="https://telegra.ph/file/278f19dd99ebc79c85140.png">
+<link rel="shortcut icon" href="https://telegra.ph/file/278f19dd99ebc79c85140.png"/>  
+<script src="sweetalert.min.js"></script>
+<script src="efek-salju.js" type="text/javascript"> </script><br><br><br>
+<meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="canonical" href="/">
+</head>
+
+<body>
+  <body>
+
+    
+  </body>
+    <div class="text">
+        <div class="status">
+            <p>STATUS : <span class="typed-text"></span><span class="cursor typing"></span></p>
+        </div>
+        <hr>
+        <div class="readdocs">
+            <p>Read <a href="/docs" class="docs">Docs.</a></p>
+        </div>
+    </div>
+    <div class="bottom">
+        <p>
+            <a href="https://www.tiktok.com/@alipje29" rel="noopener noreferrer" class="sosmed"><i class="fa-brands fa-tiktok"></i> Tiktok</a>
+        </p>
+    </div>
+</body>
+    <style>
+@import url(https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&amp;display=swap);
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Ubuntu, sans-serif
+}
+
+html {
+    background: url("https://telegra.ph/file/dd637e8c2aab774083a11.png") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover
+}
 
 body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh
+}
 
-.message {
-  text-align: center;
-  align-self: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0px 20px;
-  max-width: 450px; }
+div.text {
+    position: absolute
+}
 
-.message__title {
-  font-size: 22px;
-  font-weight: 100;
-  margin-top: 15px;
-  color: #FFFFFF;
-  margin-bottom: 8px; }
+div.text .status {
+    position: relative;
+    animation: animetop .8s
+}
+
+div.text .readdocs {
+    position: relative;
+    animation: animebot .8s;
+    text-align: center
+}
+
+@keyframes animetop {
+    0% {
+        top: -200px;
+        opacity: 0
+    }
+    100% {
+        top: 0;
+        opacity: 1
+    }
+}
+
+@keyframes animebot {
+    0% {
+        top: 200px;
+        opacity: 0
+    }
+    100% {
+        top: 0;
+        opacity: 1
+    }
+}
 
 p {
-  -webkit-margin-after: 0px;
-  -webkit-margin-before: 0px;
-  font-size: 15px;
-  color: #FFFFFF;
-  line-height: 21px;
-  margin-bottom: 4px; }
-
-.btn {
-  text-decoration: none;
-  padding: 8px 15px;
-  border-radius: 4px;
-  margin-top: 10px;
-  font-size: 14px;
-  color: #FFFFFF;
-  border: 1px solid #8B008B; }
-
-.hk-logo, .app-icon {
-  fill: #FFFFFF; }
-
-.info {
-  fill: #FFFFFF; }
-
-body.friendly {
-  background-image: url("https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg");
-  background-repeat: no-repeat;
-  background-size:cover;
-  background-position: center;
-  background-attachment: fixed;
-  height: 100%;
-
+    color: rgba(255, 255, 255, .8);
+    letter-spacing: .15em;
+    font-size: 15px!important;
+    font-weight: 600
 }
-body.friendly .message__title {
-  color: #FFFFFF; }
 
-body.friendly p {
-  color: rgba(255, 255, 255, 0.6); }
+a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, .5)
+}
 
-body.friendly .hk-logo, body.friendly .app-icon {
-  fill: rgba(255, 255, 255, 0.9); }
+a.sosmed {
+    color: rgba(255, 255, 255, .8)
+}
 
-body.friendly .info {
-  fill: rgba(255, 255, 255, 0.9); }
+a:hover {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 1)
+}
 
-body.friendly .btn {
-  color: #FFFFFF;
-  border: 1px solid rgba(255, 255, 255, 0.9); }
+.typed-text {
+    color: #0f0
+}
 
-.info_area {
-  position: fixed;
-  right: 12px;
-  bottom: 12px; }
+.cursor {
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .15em;
+    animation: typing 1.5s steps(40, end), blink-caret .75s step-end infinite
+}
 
-.logo {
-  position: fixed;
-  left: -100px;
-  bottom: -60px; }
-</style> <base target="_parent"> </head> <body class="friendly"> <div class="spacer"></div> <div class="message"> <div class="message__title text-info">KirBotz REST API</div> <a href="https://KirBotz.herokuapp.com/docs" class="btn-success btn">Documentation</a> </div> <div class="logo"><img width="300" height="200" src="https://telegra.ph/file/e5aa4cf15428d04e18a5e.jpg"></div> <script>
-f=
-_=>navigator.getBattery().then(b=>alert('Hi Kak Selamat Datang Di Rest Api KirBotz'))
-f()
-</script></body></html>
+@keyframes typing {
+    from {
+        width: 0
+    }
+    to {
+        width: 100%
+    }
+}
+
+@keyframes blink-caret {
+    from,
+    to {
+        border-color: transparent
+    }
+    50% {
+        border-color: orange
+    }
+}
+
+hr {
+    margin: 10px auto;
+    position: relative;
+    background: rgba(255, 255, 255, .5);
+    width: 80%;
+    height: 2px
+}
+
+div.bottom {
+    position: fixed;
+    left: 50%;
+    bottom: 50px;
+    transform: translate(-50%, -50%);
+    margin: 0 auto
+}
+</style>
+
+<script>
+const typedTextSpan = document.querySelector(".typed-text"),
+    textArray = ["AKTIF", "ONLINE"],
+    typingDelay = 200,
+    erasingDelay = 100,
+    newTextDelay = 2e3;
+let textArrayIndex = 0,
+    charIndex = 0;
+
+function type() { charIndex < textArray[textArrayIndex].length ? (typedTextSpan.textContent += textArray[textArrayIndex].charAt(charIndex), charIndex++, setTimeout(type, 200)) : setTimeout(erase, 2e3) }
+
+function erase() { charIndex > 0 ? (typedTextSpan.textContent = textArray[textArrayIndex].substring(0, charIndex - 1), charIndex--, setTimeout(erase, 100)) : (textArrayIndex++, textArrayIndex >= textArray.length && (textArrayIndex = 0), setTimeout(type, 1300)) }
+document.addEventListener("DOMContentLoaded", (function() { setTimeout(type, 2250) }));
+
+$(document).ready((function() {
+    $(".changeprofile").submit((function(e) {
+        var formObj, formURL = $(this).attr("action"),
+            formData = new FormData(this);
+        $.ajax({ url: formURL, type: "POST", data: formData, contentType: !1, cache: !1, processData: !1, beforeSend: function() { $("button").attr("disabled", "disabled"), $("input").attr("disabled", "disabled"), $("a").attr("disabled", "disabled"), $(".inibutton").html('<i class="fas fa-spinner fa-spin"></i> Wait') }, success: function(data) { data.includes("Success") ? ($("button").removeAttr("disabled", "disabled"), $("a").removeAttr("disabled", "disabled"), $("input").removeAttr("disabled", "disabled"), $(".inibutton").html("Save"), $.notify({ icon: "tim-icons icon-check-2", message: data }, { type: "success", timer: 3e3, placement: { from: "top", align: "right" } }), window.location = window.location) : ($("button").removeAttr("disabled", "disabled"), $("a").removeAttr("disabled", "disabled"), $("input").removeAttr("disabled", "disabled"), $(".inibutton").html("Save"), $.notify({ icon: "tim-icons icon-simple-remove", message: data }, { type: "danger", timer: 3e3, placement: { from: "top", align: "right" } })) } }), e.preventDefault()
+    }))
+}))
+
+</script>
+
+
+</html>
